# Computational-Geometry

./: .gitignore
Polygon_intersection/: CMakeLists.txt
Polygon_intersection/app/: CMakeLists.txt  Polygon_Intersection_points.cxx  Test_polygon.cpp
Polygon_intersection/lib/: LineSegmentIntersection.h
Polygon_intersection/testing/: tests.cpp
Refining_triangulation/: CMakeLists.txt
Refining_triangulation/app/: CMakeLists.txt  main.cxx
Refining_triangulation/lib/: WavefrontOBJ.h  WavefrontOBJ.hxx
Refining_triangulation/lib/PUJ_CGAL/: Helpers.h  Helpers.hxx  Triangulation_2.h  Triangulation_2.hxx
Refining_triangulation/testing/: combinations.cpp  plot_obj.py  test
cgal_datatypes/: CMakeLists.txt  base_information.cxx  type_information.cxx
convex_hull/convex_hull_final/: CMakeLists.txt
convex_hull/convex_hull_final/app/: CMakeLists.txt  brute_force.cxx  create_pointcloud.cxx  incremental.cxx
convex_hull/convex_hull_final/lib/: CSV.h  CSV.hxx  ConvexHull.h  ConvexHull.hxx
convex_hull/cxx/: ConvexHullBruteForce.cxx  CreateRandom2DPoints.cxx  result.csv
convex_hull/python/: ConvexHullBruteForce.py  CreateRandom2DPoints.py  ch.csv  result.csv
line_segment_intersection/: CMakeLists.txt
line_segment_intersection/app/: CMakeLists.txt  brute_force.cxx  innocent_brute_force.cxx  sweep.cxx
line_segment_intersection/data/: input_00.dia
line_segment_intersection/lib/: LineSegmentIntersection.h  LineSegmentIntersection.hxx  WavefrontOBJ.h  WavefrontOBJ.hxx
tringulations/: Decompose_monotone_polygon.cpp
